# auton

./: README.md
auton_program/: Anchor.toml  pnpm-lock.yaml
auton_program/programs/auton_program/: Cargo.toml
auton_program/programs/auton_program/src/: lib.rs
auton_program/programs/sponsor_program/: Cargo.toml
auton_program/programs/sponsor_program/src/: lib.rs
auton_program/programs/vault_governance/: Cargo.toml
auton_program/programs/vault_governance/src/: lib.rs
auton_program/tests/: auton_program.js  auton_program.ts
backend/: database.js  db.json  package-lock.json  package.json  server.js
backend/middleware/: apiAuth.js  rateLimit.js
backend/routes/: api.js  auth.js  content.js  creators.js  sponsor.js
backend/scripts/: generate-vault-wallet.js
backend/storage/: storageProvider.js
backend/utils/: abuseDetection.js  accessToken.js  encryption.js  logger.js  payment.js  sponsor.js  vault.js
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/content/: route.ts
frontend/app/api/creator/: route.ts
frontend/app/api/upload/: route.ts
frontend/components/: CreateDropModal.tsx  CreatorContentPage.tsx  CreatorProfile.tsx  DashboardMetrics.tsx  DashboardNav.tsx  MyPurchases.tsx  OnboardingTooltips.tsx  PaymentModal.tsx  PublishedDropsList.tsx  SocialLogin.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UsernameSetup.tsx  WalletProvider.tsx
frontend/lib/: db.json  privy-solana-adapter.ts
frontend/lib/anchor/: auton_program.json  auton_program.ts
(+11 files in other folders)
