[package]
name = "vault_governance"
version = "0.1.0"
description = "Vault governance program for Auton platform fees"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_governance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
solana-program = "1.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

